[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-mcp-pro"
version = "0.6.0"
description = "Open-source MCP server for LinkedIn — profiles, search, jobs, posts, connections, messages. Self-hosted, ban-safe, MIT licensed."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "linkedin-mcp-pro contributors"}
]
keywords = ["linkedin", "mcp", "model-context-protocol", "automation", "outreach", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "mcp>=1.0",                 # official MCP SDK (Python)
    "pydantic-settings>=2.2",
    "tenacity>=8.2",            # retries
    "rich>=13.7",               # pretty logging
    "PyYAML>=6.0",              # post templates (v0.5.0)
    "croniter>=2.0",            # post scheduler cron parsing (v0.5.0)
    # NOTE: For write actions, we use `agent-browser` (Vercel Labs,
    # Apache-2.0, 36k+ stars) — a Rust CLI that drives real Chrome.
    # Install separately:
    #   npm install -g agent-browser
    #   agent-browser install --with-deps
    # See README.md for full instructions.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-requests",
]

[project.scripts]
linkedin-mcp-pro = "linkedin_mcp.server:main"
linkedin-mcp-health = "linkedin_mcp.cli:health"
linkedin-mcp-stats = "linkedin_mcp.cli:stats"
linkedin-mcp-login = "linkedin_mcp.cli:login"
linkedin-mcp-templates = "linkedin_mcp.cli_templates:main"
linkedin-mcp-deadman = "linkedin_mcp.cli_deadman:main"
linkedin-mcp-schedule = "linkedin_mcp.cli_scheduler:main"
linkedin-mcp-analytics = "linkedin_mcp.cli_analytics:main"

[project.urls]
Homepage = "https://github.com/horizonbymuneeb/linkedin-mcp-pro"
Repository = "https://github.com/horizonbymuneeb/linkedin-mcp-pro"
Issues = "https://github.com/horizonbymuneeb/linkedin-mcp-pro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["linkedin_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = [
    "S101",  # asserts allowed in tests
    "E501",  # line-length handled by formatter
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
